# macro_magic_example

./: Cargo.toml  README.md
foreign_crate/: Cargo.toml
foreign_crate/src/: lib.rs
macros_crate/: Cargo.toml
macros_crate/src/: lib.rs
src/: lib.rs
