[workspace]
members = ["foreign_crate", "macros_crate"]

[package]
name = "user_crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros_crate = { path = "macros_crate" }
foreign_crate = { path = "foreign_crate" }
macro_magic = { version = "0.3" }
